# tree-cli

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: performance.rs  regression_simple.rs  simple_perf.rs
src/: core.rs  file_iterator.rs  filter.rs  lib.rs  main.rs  symbol.rs
tests/: integration_test.rs  test_color_and_options.rs  test_exclude.rs
