[package]
name = "tree-cli"
version = "0.1.1"
edition = "2024"
authors = ["Kurisu <lucifer994@gmail.com>"]
description = "a simple cross-platform alternative to the unix `tree` command."


[[bin]]
name = "tree-cli"
path = "src/main.rs"

[lib]
name = "tree_cli"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
term = "0.7"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "simple_perf"
harness = false

[[bench]]
name = "regression_simple"
harness = false
